[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inf-hub"
version = "0.2.5"
description = "Git-style CLI for versioned Infisical environment workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Paperized"}
]
keywords = ["infisical", "cli", "env", "secrets", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["argcomplete", "keyring", "keyring-pass", "PyYAML", "rich", "questionary"]

[project.scripts]
ih = "inf_hub.cli:main"
ih-dc = "inf_hub.cli:main"
ih-test = "inf_hub.cli:main"

[project.urls]
Homepage = "https://github.com/Paperized/inf-hub"
Repository = "https://github.com/Paperized/inf-hub"
Issues = "https://github.com/Paperized/inf-hub/issues"
